k8s-on-premise-cloud/uptime-kuma/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  ingressClassName: nginx 
  rules:
    - host: uptime-kuma.nhatanhmovie.website
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
